# auto-penguin-setup

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml  run.py  setup.sh
.github/: CONTRIBUTING.md  CONTRIBUTING.tr.md
.github/ISSUE_TEMPLATE/: bug_report.md
autocomplete/: README.md  bash_autocomplete  zsh_autocomplete
config_examples/: packages.ini  pkgmap.ini
configs/: 99-touchpad.conf  README.md  thinkfan.conf
docs/: COPR_AUR_HANDLING.md  DEVELOPER.md  FAQ.md  IFS_EXPLAINED.md  PACKAGE_TRACKING.md  aps_todo.org  e2e-testing.md  todo.md  wiki.md
docs/adr/: adr-0002-singleton-via-fcntl-flock.md  adr-0003-extend-setup-removal-to-all-installers.md  adr-0004-automate-default-shell-change.md  adr-0005-add-tuned-setup-component.md  adr-0006-app-specific-variables-ini-sections.md  adr-0007-unified-package-detection-in-setup-modules.md  adr-0008-pytest-tmp-folder-structure.md  adr-0009-remove-nvidia-xorg-conf-setup.md  adr-0010-disable-kdewallet-with-gnome-keyring.md  adr-0011-one-line-install-command.md
docs/architecture/: arch-design-pattern.md  config.arch.md  core-modules.arch.md  core.arch.md  data-flow.arch.md  directory_structure.md  error.arch.md  package-manager.arch.md  package_tracking.arch.md  security.arch.md  testing.md
docs/migration/: flatpak-to-pkgmap.md
docs/prd/: package-architecture.md
scripts/: README.md  autocomplete.bash
src/apps/: autocpufreq.sh  borgbackup.sh  brave.sh  lazygit.sh  nfancurve.sh  ohmyzsh.sh  ollama.sh  protonvpn.sh  syncthing.sh  thinkfan.sh  tlp.sh  trash-cli.sh  ueberzugpp.sh  virtmanager.sh  vscode.sh
src/aps/: __init__.py  __main__.py  main.py
src/core/: config.sh  constants.sh  distro_detection.sh  ini_parser.sh  install_packages.sh  logging.sh  package_manager.sh  package_mapping.sh  package_tracking.sh  repo_migration.sh  repository_manager.sh  update_config.sh
src/display/: gdm.sh  lightdm.sh  sddm.sh
src/distro/: arch.sh  fedora.sh
src/hardware/: amd.sh  hostname.sh  intel.sh  nvidia.sh  touchpad.sh
src/system/: enable_nonfree.sh  ffmpeg.sh  grub.sh  network.sh  setup_default_apps.sh  speedup_pm.sh  ssh.sh  sudoers.sh  ufw.sh  update_boot.sh
src/utils/: device_detection.sh  gpu_detect.sh  string_utils.sh
tests/: README.md  conftest.py  test_apps.sh  test_cli.py  test_config.py  test_config.sh  test_config_parser.py  test_desktop.sh  test_distro.py  test_general.sh  test_hardware.py  test_helper.bash  test_installers.py  test_logger.py  test_logging.sh  test_main.py  test_official_repos_priority.py  test_package_mapper.py  test_repo_manager.py  test_setup.py  test_setup.sh  test_sync_repos.py  test_system.py  test_tracking.py  test_utils.py  test_wm_display.py
(+170 files in other folders)
